--- a/res/css/style.css
+++ b/res/css/style.css
@@ -105,7 +105,7 @@ header {
     font-size: 14px;
     text-transform: uppercase;
     letter-spacing: 0.05em;
-    color: rgba(0,0,0,0.7);
+    color: white;
 }
 
 @media screen and (max-width:605px) {
@@ -245,9 +245,10 @@ h3 {
         width: 200px;
         height: 200px;
         order: 3;
-        text-align: center;
-        font-size: 175px;
-        color: skyblue;
+        background-image: url(../images/face.jpg);
+        background-size: cover;
+        background-position: center;
+        border-radius: 50%;
     }
 
     .face-lockup .icon-basketball, .face-lockup .icon-code, .face-lockup .icon-gamepad, .face-lockup .icon-music {
